# golpp

./: Board.cpp  Board.hpp  CMakeLists.txt  Life.cpp  Life.hpp  README.md  main.cpp
